ingress-ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx","nginx.ingress.kubernetes.io/rewrite-target":"/$1","nginx.ingress.kubernetes.io/use-regex":"true"},"name":"ingress-service","namespace":"default"},"spec":{"rules":[{"http":{"paths":[{"backend":{"service":{"name":"client-cluster-ip-service","port":{"number":3000}}},"path":"/?(.*)","pathType":"Prefix"},{"backend":{"service":{"name":"server-cluster-ip-service","port":{"number [...]
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$
    nginx.ingress.kubernetes.io/use-regex: "true"
  creationTimestamp: "2021-11-28T00:48:22Z"
  generation: 5
  name: ingress-service
  namespace: default
  resourceVersion: "7963"
  uid: dee24948-0ae2-4e9e-9728-0b2cd9fc5407
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: client-cluster-ip-service
            port:
              number: 3000
        path: /?(.*)
        pathType: Prefix
      - backend:
          service:
            name: server-cluster-ip-service
            port:
              number: 5000
        path: /api/?(.*)
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: localhost
